[tool.poetry]
name = "dynamodb-session-flask"
version = "1.0.2"
description = "A session implementation for Flask using DynamoDB as a backing store and OWASP best practices for session management."
keywords = ["flask", "session", "DynamoDB"]
authors = ["Jason Capriotti <jason.capriotti@gmail.com>"]
license = "MIT"
include = [
    "LICENSE",
]
readme = "README.md"
homepage = "https://github.com/JCapriotti/dynamodb-session-flask"
repository = "https://github.com/JCapriotti/dynamodb-session-flask"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.0"
dynamodb-session-web = "^0.2.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-docker = "^0.10.3"
pytest-mock = "^3.7.0"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, missing-class-docstring, missing-module-docstring"
max-line-length = 120
